feat: implement swag on controllers
