# pkg/controllers/order_controller.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"fmt"
 	"net/http"
 	"stickerfy/app/models"
 	"stickerfy/app/services"
@@ -28,6 +29,13 @@ func NewOrderController(orderService services.OrderService) OrderController {
 }
 
 // GetAll returns all orders
+// @Description Get all exists orders.
+// @Summary get all exists orders
+// @Tags Order
+// @Accept json
+// @Produce json
+// @Success 200 {array} models.Product
+// @Router /orders [get]
 func (oc *orderController) GetAll(c *fiber.Ctx) error {
 	orders, err := oc.orderService.GetAll()
 	if err != nil {
@@ -46,9 +54,18 @@ func (oc *orderController) GetAll(c *fiber.Ctx) error {
 }
 
 // Post creates a new order
+// @Description Create a new order.
+// @Summary create a new order
+// @Tags Order
+// @Accept json
+// @Produce json
+// @Param items body []models.OrderItem true "Order Items"
+// @Success 200 {object} models.Order
+// @Router /order [post]
 func (oc *orderController) Post(c *fiber.Ctx) error {
 	var order models.Order
 	if err := c.BodyParser(&order); err != nil {
+		fmt.Println(err)
 		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
 			"order": nil,
 			"error": true,
